websocket for messages+pictures fixed